town page overlap fix

--- a/lesson-06/css/medium.css
+++ b/lesson-06/css/medium.css
@@ -279,6 +279,8 @@
 
     .block-img {
         display: block;
+        max-width: 100%;
+        height: auto;
     }
 
     .town-banner-content {
